src/components/video/card/VideoCard.less
@import '../../../../resources/styles/_animations';
@import '../../../../resources/styles/_antd-theme';

@video-width: 304px;
@video-height: 228px;
@video-border-radius: 8px;

.ant-card.video-card {
  position: relative;
  cursor: pointer;

  &.skeleton {
    animation: slide-in 0.5s 0s both;
    .animation-delay(10);
  }

  &:nth-of-type(1) {
    margin-top: 20px;
  }

  margin-top: 28px;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.1);
  border-radius: @video-border-radius;

  .subjects-container {
    margin-bottom: 1em;
    margin-top: 0px;
  }

  .ant-skeleton {
    @media (max-width: @screen-md) {
      display: flex;
      width: 100%;
      flex-direction: column;
    }

    .ant-skeleton-header {
      @media (max-width: @screen-md) {
        padding: 0px;
      }

      .ant-skeleton-avatar-lg {
        border-radius: @video-border-radius;
        @media (min-width: @screen-md) {
          width: @video-width;
          height: @video-height;
        }

        @media (max-width: @screen-md) {
          width: 100%;
          height: 200px;
        }
      }
    }

    .ant-skeleton-paragraph,
    .ant-skeleton-title {
      @media (max-width: @screen-md) {
        margin: 12px;
      }
    }
  }

  .ant-card-body {
    height: 100%;
    @media (max-width: @screen-md) {
      padding: 0px;
    }
  }

  .boclips-player {
    max-height: @video-height;

    @media (max-width: @screen-md) {
      border-radius: @video-border-radius @video-border-radius 0px 0px;
    }
  }

  .video-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: left;
    height: 100%;
    animation: fade-in 0.4s ease;

    @media (max-width: @screen-md) {
      flex-direction: column;
    }

    .card-video-header {
      @media (max-width: @screen-md) {
        order: 2;
      }
    }

    .buttons-row {
      @media (max-width: @screen-md) {
        order: 3;
      }
    }

    .boclips-player {
      @media (min-width: @screen-md) {
        width: @video-width;
      }

      @media (max-width: @screen-md) {
        width: 100%;
        order: 1;
      }

      video {
        width: 100%;
        height: 100%;
        background-color: black;
      }
    }

    .video-details {
      @description-left-margin: 24px;
      display: flex;
      flex-direction: column;
      justify-content: flex-start;

      @media (min-width: @screen-md) {
        margin: 0 0 0 @description-left-margin;
        width: calc(100% - (@video-width + @description-left-margin));
      }

      @media (max-width: @screen-md) {
        order: 3;
        width: 100%;
        margin-left: 0px;
        padding: 12px;
      }

      .no-underline {
        text-decoration: none;
      }

      .description {
        @media (min-width: @screen-md) {
          &.clamp-3-lines {
            overflow: hidden;
            text-overflow: ellipsis;
            display: -webkit-box;
            -webkit-line-clamp: 3;
            -webkit-box-orient: vertical;
            max-height: 72px;
          }
        }

        @media (max-width: @screen-md) {
          &.clamp-3-lines {
            overflow: hidden;
            text-overflow: ellipsis;
            display: -webkit-box;
            -webkit-line-clamp: 5;
            -webkit-box-orient: vertical;
            max-height: 120px;
          }
        }
      }

      .toggle-collection-button {
        margin-top: 4px;

        img {
          margin-right: 4px;
        }
      }

      .buttons-row {
        margin-top: auto;
      }
    }
  }
}

